# Stat_app

./: .gitignore  README.md  pyproject.toml
covid_training/ressources/: Docu-data_covid.docx  causal_dag_structured.csv  combined_covid_data.csv  covid_data.xlsx
covid_training/src/: MAKE_env.py  analyze_covid_data.py  make_dag.py  naive_model.py  preparation_covid_data.py  test.py
