[project]
name = "stat-app"
version = "0.1.0"
description = "Causal DAG Analysis for COVID-19 Vaccine Impact Study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "networkx>=3.3",
    "lifelines>=0.30.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
